--- a/ArchivoBase/Lab3-STW2-2019-1-Eval/pom.xml
+++ b/ArchivoBase/Lab3-STW2-2019-1-Eval/pom.xml
@@ -52,7 +52,15 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.15</version>
-        </dependency>        
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
